--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "chai": "^4.3.6",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.6.2",
-    "hardhat": "^2.9.2"
+    "hardhat": "^2.9.2",
+    "solidity-coverage": "^0.7.20"
   }
 }
