--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.6.2",
     "hardhat": "^2.9.2",
-    "solidity-coverage": "^0.7.20",
-    "solc": "^0.8.14"
+    "solc": "^0.8.14",
+    "solidity-coverage": "^0.7.20"
   }
 }
